# mathtuples

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
mathtuples/: __init__.py  convert.py  exceptions.py  latex_mml.py  math_extractor.py  mathml.py  mathsymbol.py  symboltree.py  testConvert.py  utility.py
mathtuples/testFiles/: 02459.html  Arith_cases.html  Euclidean_algorithm.html  test_1.xml  test_2.xml  test_edge_pair.xml  test_repetitions.xml  test_terminal_small_1.xml  test_terminal_small_2.xml  test_wildcard_1.xml  test_wildcard_2.xml
