[metadata]
name = mathtuples
version = 1.0
author = Dallas Fraser and Frank Tompa
author_email = fwtompa@uwaterloo.ca
description = Creates math tuples from MathML
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html
#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[options]
python_requires = >=3