[metadata]
name = mathtuples
version = 1.0
author = Dallas Fraser, Nidhin Pattaniyil, David Stalnaker, Frank Tomp, Richard Zanibbi
author_email = fwtompa@uwaterloo.ca
description = Creates math tuples from MathML
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html
#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt
url = https://github.com/fwtompa/mathtuples
keywords = MathIR, MathML formula retrieval, Tangent-L, MathDowsers


[options]
python_requires = >=3

[options.package_data]
mathtuples = testFiles/*.html, testFiles/*.xml
